# voskgpu_sh

./: .gitignore  ENV_MAP.md  code-init.sh  run_bench.sh  sdk_to_vm.sh
CPP/: CMakeLists.txt  vosk_api.cpp
CPP/hystor/0/: CMakeLists.txt  vosk_api.cpp
CPP/hystor/1/: vosk_api.cpp
CPP/hystor/2/: CMakeLists.txt  vosk_api.cpp  vosk_api.h
CPP/hystor/3/: CMakeLists.txt  vosk_api.cpp
CPP/hystor/4/: vosk_api.cpp  vosk_api.h
SHARP/: VOSKSH.slnx
SHARP/CORE/: NativeMethods.cs
SHARP/SAMPLES/: Program.cs  SAMPLES.csproj
SHARP/SAMPLES/deploy/: SAMPLES.deps.json
releases/: changes_march_11_12.diff
